--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			<!-- This "div" wraps around all of our content and just changes how things are layed out -->
 			<div id="wrapper">
 
-					<!-- This is where the content that appears on page load exists -->
+					<!-- This is where rthe content that appears on page load exists -->
 					<header id="header">
 						<!-- This is the main content of the front page -->
 						<div class="content">
