--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 							<h2 class="major">About Me</h2>
 							<!-- Here is an image that you can customize for this page -->
 							<span class="image main">
-								<img src="images/pic01.jpg" alt=""/>
+								<img src="images/guilin_2019.png" alt=""/>
 							</span>
 							<!-- Here are three paragraphs where you can fill out information about yourself -->
 							<p>
@@ -111,8 +111,9 @@
 							<p>
 								<b>Research Interests:</b>
 							</p>
+							
 							<p>
-								<b>Publications:</b> <a href="https://ui.adsabs.harvard.edu/">Include ADS link!</a>
+								<b>Publications:</b> <a href="https://ui.adsabs.harvard.edu/abs/2019arXiv190907323D/abstract">Include ADS link!</a>
 							</p>
 						</article>
 
