--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
 								<p>
 									Position <br> Institution
 								</p>
+								PhD Student in Physics & Astronomy
+								University of Utah
 								<!-- Here is a paragraph where you can put a link to your CV -->
 								<p>
 									<!-- Note you will want to change where this points to! -->
