--- a/index.html
+++ b/index.html
@@ -53,10 +53,11 @@
 									a short line about yourself.
 								-->
 								<p>
-									Position <br> Institution
+									Position
+									PhD Student in Physics & Astronomy
+									<br> Institution
+									University of Utah
 								</p>
-								PhD Student in Physics & Astronomy
-								University of Utah
 								<!-- Here is a paragraph where you can put a link to your CV -->
 								<p>
 									<!-- Note you will want to change where this points to! -->
