--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
 									a short line about yourself.
 								-->
 								<p>
-									Position
+									Position <br>
 									PhD Student in Physics & Astronomy
-									<br> Institution
+									<br> Institution <br>
 									University of Utah
 								</p>
 								<!-- Here is a paragraph where you can put a link to your CV -->
