--- a/index.html
+++ b/index.html
@@ -53,8 +53,9 @@
 									a short line about yourself.
 								-->
 								<p>
-									Position <br>
-									PhD Student in Physics & Astronomy
+									Position <br> 
+									<br> 
+									Ph.D. candidate in Physics & Astronomy
 									<br> Institution <br>
 									University of Utah
 								</p>
@@ -104,7 +105,7 @@
 							<h2 class="major">About Me</h2>
 							<!-- Here is an image that you can customize for this page -->
 							<span class="image main">
-								<img src="images/guilin_2019.png" alt=""/>
+								<img src="images/Astronomy.jpg" alt=""/>
 							</span>
 							<!-- Here are three paragraphs where you can fill out information about yourself -->
 							<p>
@@ -124,13 +125,13 @@
 						<article id="research">
 							<h2 class="major">Research</h2>
 							<span class="image main">
-								<img src="images/pic02.jpg" alt=""/>
+								<img src="images/guilin_2019.png" alt=""/>
 							</span>
 							<p>
 								<!-- 	A <br> tag puts in a break so that the text that follows it displays on
 									the next line.
 								-->
-								<b>Project I Title</b><br>Project description, including further links to posters, talks, publications.
+								<b>Surprisingly Strong K-band Emission Found in Low-luminosity Active Galactic Nuclei</b><br><a href="https://iopscience.iop.org/article/10.3847/1538-4357/ab5798"> APJ link!</a>.
 							</p>
 							<p>
 								<b>Project II Title</b><br>Project description, including further links to posters, talks, publications.
@@ -160,6 +161,7 @@
 							<p> 
 								<b>Email:</b> 
 							</p>
+							antoine.dumont.neira@hotmail.com
 							<p> 
 								<b>Address:</b> 
 							</p>
