--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
 									Position <br> 
 									<br> 
 									Ph.D. candidate in Physics & Astronomy
+									<br>
 									<br> Institution <br>
+									<br>
 									University of Utah
 								</p>
 								<!-- Here is a paragraph where you can put a link to your CV -->
@@ -112,12 +114,17 @@
 								<!-- Items contained in <b> tags are bolded! -->
 								<b>Education:</b>
 							</p>
+							Bachelor of Science in Applied Physics, University of Santiago
+							<br>
+							Master in Physics, University of Utah
+							<br>
+							Ph.D. candidate Physics & Astronomy, University of Utah
 							<p>
 								<b>Research Interests:</b>
 							</p>
 							
 							<p>
-								<b>Publications:</b> <a href="https://ui.adsabs.harvard.edu/abs/2019arXiv190907323D/abstract">Include ADS link!</a>
+								<b>Publications:</b> <a href="https://ui.adsabs.harvard.edu/abs/2019arXiv190907323D/abstract"> ADS link!</a>
 							</p>
 						</article>
 
