--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 								<!-- Here is a paragraph where you can put a link to your CV -->
 								<p>
 									<!-- Note you will want to change where this points to! -->
-									<a href="images/mypic.jpeg" target="_blank">Cirriculum Vitae</a>
+									<a href="images/mypic.jpeg" target="images/CV.pdf">Cirriculum Vitae</a>
 								</p>
 							</div>
 						</div>
