--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 								<!-- Here is a paragraph where you can put a link to your CV -->
 								<p>
 									<!-- Note you will want to change where this points to! -->
-									<a href=""https://drive.google.com/file/d/1dWC_Vsqn_OYxsfvSyXzvHN1P-HHv6bUo/view?usp=sharing" Cirriculum Vitae</a>
+									<a href=""https://drive.google.com/file/d/1dWC_Vsqn_OYxsfvSyXzvHN1P-HHv6bUo/view?usp=sharing"> Cirriculum Vitae</a>
 								</p>
 							</div>
 						</div>
