--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
 								-->
 								<p>
 									Position <br> 
-									<br> 
+									</p>
 									Ph.D. candidate in Physics & Astronomy
-									<br>
+									</p>
 									<br> Institution <br>
-									<br>
+									</p>
 									University of Utah
 								</p>
 								<!-- Here is a paragraph where you can put a link to your CV -->
@@ -141,7 +141,7 @@
 								<b>Surprisingly Strong K-band Emission Found in Low-luminosity Active Galactic Nuclei</b><br><a href="https://iopscience.iop.org/article/10.3847/1538-4357/ab5798"> APJ link!</a>.
 							</p>
 							<p>
-								<b>Project II Title</b><br>Project description, including further links to posters, talks, publications.
+								<b>Revealing the accretion history of Centaurus A through its surviving nuclear star clusters</b><br>Project description, including further links to posters, talks, publications.
 							</p>
 						</article>
 
@@ -167,8 +167,8 @@
 							<h2 class="major">Contact</h2>
 							<p> 
 								<b>Email:</b> 
+								antoine.dumont.neira@hotmail.com
 							</p>
-							antoine.dumont.neira@hotmail.com
 							<p> 
 								<b>Address:</b> 
 							</p>
