--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
 									a short line about yourself.
 								-->
 								<p>
-									Position <br> 
+									Position
 									</p>
 									Ph.D. candidate in Physics & Astronomy
 									</p>
-									<br> Institution <br>
+									Institution
 									</p>
 									University of Utah
 								</p>
