--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
 									a short line about yourself.
 								-->
 								<p>
-									Position
-									</p>
+									Position </p>
+							
 									Ph.D. candidate in Physics & Astronomy
-									</p>
-									Institution
-									</p>
+									<br>
+									Institution</p>
+									<br>
 									University of Utah
 								</p>
 								<!-- Here is a paragraph where you can put a link to your CV -->
