--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
 									a short line about yourself.
 								-->
 								<p>
-									Position </p>
+									Position <p>
 							
 									Ph.D. candidate in Physics & Astronomy
 									<br>
-									Institution</p>
-									<br>
+									Institution<p>
+									
 									University of Utah
 								</p>
 								<!-- Here is a paragraph where you can put a link to your CV -->
