--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 									a short line about yourself.
 								-->
 								<p>
-									Position<br>
+									Position
 									<br>
 									Ph.D. candidate in Physics & Astronomy
 									<br>
