--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
 									a short line about yourself.
 								-->
 								<p>
-									Position
+									Position:
 									<br>
 									Ph.D. candidate in Physics & Astronomy
 									<br>
 									<br>
-									Institution
+									Institution:
 									<br>
 									University of Utah
 								</p>
