--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 								<!-- Here is a paragraph where you can put a link to your CV -->
 								<p>
 									<!-- Note you will want to change where this points to! -->
-									<a href="https://drive.google.com/file/d/1L17HpA8g7BipygmYACblM1ndxXwTzHr9/view?usp=sharing"> Cirriculum Vitae</a>
+									<a href="https://drive.google.com/file/d/1L17HpA8g7BipygmYACblM1ndxXwTzHr9/view?usp=sharing"> Curriculum Vitae</a>
 								</p>
 							</div>
 						</div>
