--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 							<p>
 								<b>Research Interests:</b>
 							</p>
-							
+							Globular Clusters, Low-luminosity AGN
 							<p>
 								<b>Publications:</b> <a href="https://ui.adsabs.harvard.edu/abs/2019arXiv190907323D/abstract"> ADS link!</a>
 							</p>
