--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 								<!-- Here is a paragraph where you can put a link to your CV -->
 								<p>
 									<!-- Note you will want to change where this points to! -->
-									<a href='https://drive.google.com/file/d/1Wi4yhFwmUtnbvPanbDWUPyhFI6YSdrm2/view?usp=sharing' > Curriculum Vitae</a>
+									<a href="https://drive.google.com/file/d/1Wi4yhFwmUtnbvPanbDWUPyhFI6YSdrm2/view?usp=sharing" > Curriculum Vitae</a>
 								</p>
 							</div>
 						</div>
