--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<head>
 		<!-- This is the title of the page. It is the text that appears inside this pages tab in your web browser -->
 		<title>AstroSites</title>
+		<img src="images/Astronomy.jpg" style="width:280px; height:280px; object-fit: cover;">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<!-- 	This links to this page's CSS, which is contained in the folder assets/css and the file main.css.
@@ -92,9 +93,9 @@
 								<!-- 	You can add another button to your navigation menu by adding
 									another List Item with a link inside of it.
 								-->
-								 <li>
+								 <!-- <li>
 									<a href="images/Astronomy.jpg">My CV</a>
-								</li>
+								</li> -->
 							</ul>
 						</nav>
 					</header>
