--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 			<!-- This "div" wraps around all of our content and just changes how things are layed out -->
 			<div id="wrapper">
-			<img src="images/Astronomy.jpg" style="width:280px; height:280px; object-fit: cover;">
+			<img src="images/Astronomy.jpg" style="width:480px; height:480px">
 					<!-- This is where rthe content that appears on page load exists -->
 					<header id="header">
 						<!-- This is the main content of the front page -->
