--- a/index.html
+++ b/index.html
@@ -143,7 +143,10 @@
 								<b>Surprisingly Strong K-band Emission Found in Low-luminosity Active Galactic Nuclei</b><br><a href="https://iopscience.iop.org/article/10.3847/1538-4357/ab5798"> APJ link!</a>.
 							</p>
 							<p>
-								<b>Revealing the accretion history of Centaurus A through its surviving nuclear star clusters</b><br>Project description, including further links to posters, talks, publications.
+								<b>Revealing the accretion history of Centaurus A through its surviving nuclear star clusters</b><br>The goal of my current research is to identify stripped nuclei in CenA 
+								through dynamical mass measurements of globular clusters (GCs). These measurements can 
+								reveal the presence of SMBHs that are present in stripped nuclei, which are the remnants 
+								of galaxies whose outer parts were stripped through tidal interactions with CenA.
 							</p>
 						</article>
 
@@ -173,6 +176,7 @@
 							</p>
 							<p> 
 								<b>Address:</b> 
+								University of Utah, 115 South 1400 East 84122 Salt Lake City, USA
 							</p>
 
 							<!-- 	Here are the fancy icons that link to your social media.
