--- a/index.html
+++ b/index.html
@@ -116,15 +116,13 @@
 								<!-- Items contained in <b> tags are bolded! -->
 								<b>Education:</b>
 							</p>
-							Bachelor of Science in Applied Physics, University of Santiago
-							<br>
-							Master in Physics, University of Utah
-							<br>
-							Ph.D. candidate Physics & Astronomy, University of Utah
+							I was borned and raised in the souther regions of Chile. I received my undergrad studies in Applied Physics at the Universtiy of Santiago. 
+							In 2016 I joined the graduate program in Physics & Astronomy at the University of Utah where I obtained my milestone master in Physics & Astronomy
+							and now I am a Ph.D. candidate in the same institution. 
 							<p>
 								<b>Research Interests:</b>
 							</p>
-							Globular Clusters, Low-luminosity AGN
+							I am particulary interested in the center of galaxies and their conection to AGN actretion, specially at low-lumiosities, and also the fomation and evolution of nearby galaxies.
 							<p>
 								<b>Publications:</b> <a href="https://ui.adsabs.harvard.edu/abs/2019arXiv190907323D/abstract"> ADS link!</a>
 							</p>
