--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
 								<b>Surprisingly Strong K-band Emission Found in Low-luminosity Active Galactic Nuclei</b><br>In this project we study the near-infrared (NIR) emission in 15 
 								local LLAGNs using high resolution NIR Gemini/NIFS Integral Field Unit (IFU) adaptive optics data. 
 								We found an excess of NIR to X-ray emission at low-acreation rates, challenging the standar model of AGN acreation, and encouraging the usage of NIR for AGN tracers
-								at low-luminosities specially looking at the future with JWST.
-								<a href="https://iopscience.iop.org/article/10.3847/1538-4357/ab5798"> APJ link!</a>.
+								at low-luminosities specially looking at the future with JWST.<br>
+								<a href="https://youtu.be/7dYG2r2e4vc"> Here you can see my talk for the SMBH conference in Pucon, Chile in Dec. 2020</a>,<a href="https://iopscience.iop.org/article/10.3847/1538-4357/ab5798"> and the link to the paper!</a>.
 							</p>
 							<p>
 								<b>Revealing the accretion history of Centaurus A through its surviving nuclear star clusters</b><br>The goal of my current research is to identify stripped nuclei in CenA 
