--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 						<article id="community">
 							<h2 class="major">Community</h2>
 							<span class="image main">
-								<img src="images/pic03.jpg" alt=""/>
+								<img src="images/IMG_0024.png" alt=""/>
 							</span>
 							<p>
 								<b>Teaching:</b>
