--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 							<p>
 								<b>Outreach:</b>
 							</p>
-							 Atmospheric ballon launch <a href="https://youtu.be/gwAuOsoh3jI"> video </a>in the west dessert of Utah
+							 Atmospheric ballon launch <a href="https://youtu.be/gwAuOsoh3jI"> video </a>in the west dessert of Utah.
 							<p>
 								<b>Equity & Inclusion:</b>
 							</p>
