--- a/index.html
+++ b/index.html
@@ -174,6 +174,8 @@
 						<!-- Here is a the "Contact" card. -->
 						<article id="contact">
 							<h2 class="major">Contact</h2>
+							<span class="image main">
+								<img src="images/mypic.jpeg" alt=""/>
 							<p> 
 								<b>Email:</b> 
 								antoine.dumont.neira@hotmail.com
