--- a/index.html
+++ b/index.html
@@ -176,6 +176,7 @@
 							<h2 class="major">Contact</h2>
 							<span class="image main">
 								<img src="images/mypic.jpeg" alt=""/>
+							</span>
 							<p> 
 								<b>Email:</b> 
 								antoine.dumont.neira@hotmail.com
