--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 						<article id="contact">
 							<h2 class="major">Contact</h2>
 							<span class="image main">
-								<img src="images/mypic.jpeg" alt=""/>
+								<img src="images/mypic.jpg" alt=""/>
 							</span>
 							<p> 
 								<b>Email:</b> 
