--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 							</p>
 							I am particulary interested in the center of galaxies and their conection to AGN actretion, specially at low-lumiosities, and also the fomation and evolution of nearby galaxies.
 							<p>
-								<b>Publications:</b> <a href="https://ui.adsabs.harvard.edu/abs/2019arXiv190907323D/abstract"> ADS link!</a>
+								<b>Publications:</b> <a href="https://ui.adsabs.harvard.edu/search/filter_author_facet_hier_fq_author=NOT&filter_author_facet_hier_fq_author=(*%3A*%20NOT%20author_facet_hier%3A%221%2FDumont%2C%20A%2FDumont%2C%20A-M%22%20NOT%20author_facet_hier%3A%221%2FDumont%2C%20A%2FDumont%2C%20A%20%20M%22%20NOT%20author_facet_hier%3A%221%2FDumont%2C%20A%2FDumont%2C%20A%20%20-M%22)&filter_author_facet_hier_fq_author=author_facet_hier%3A%221%2FDumont%2C%20A%2FDumont%2C%20A%22&filter_database_fq_database=AND&filter_database_fq_database=database%3A%22astronomy%22&fq=%7B!type%3Daqp%20v%3D%24fq_database%7D&fq=%7B!type%3Daqp%20v%3D%24fq_author%7D&fq_author=((*%3A*%20NOT%20author_facet_hier%3A%221%2FDumont%2C%20A%2FDumont%2C%20A-M%22%20NOT%20author_facet_hier%3A%221%2FDumont%2C%20A%2FDumont%2C%20A%20%20M%22%20NOT%20author_facet_hier%3A%221%2FDumont%2C%20A%2FDumont%2C%20A%20%20-M%22)%20NOT%20author_facet_hier%3A%221%2FDumont%2C%20A%2FDumont%2C%20A%22)&fq_database=(database%3A%22astronomy%22)&q=author%3A%22Dumont%2C%20Antoine%22&sort=date%20desc%2C%20bibcode%20desc&p_=0"> ADS link!</a>
 							</p>
 						</article>
 
