--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 								<!-- Items contained in <b> tags are bolded! -->
 								<b>Education:</b>
 							</p>
-							I was borned and raised in the souther regions of Chile. I received my undergrad studies in Applied Physics at the Universtiy of Santiago in 2015. 
+							I was borned and raised in the southern regions of Chile. I received my undergrad studies in Applied Physics at the Universtiy of Santiago in 2015. 
 							In 2016 I joined the graduate program in Physics & Astronomy at the University of Utah where I obtained my milestone master in Physics & Astronomy
 							and now I am a Ph.D. candidate in the same institution. 
 							<p>
