--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
 								<p>
 									Position:
 									<br>
-									Ph.D. candidate in Physics & Astronomy
+									Postdoctoral Researcher at Galactic Nuclei group 
 									<br>
 									<br>
 									Institution:
 									<br>
-									University of Utah
+									Max Planck Institut fur Astroomie
 								</p>
 								<!-- Here is a paragraph where you can put a link to your CV -->
 								<p>
