--- a/index.html
+++ b/index.html
@@ -179,11 +179,11 @@
 							</span>
 							<p> 
 								<b>Email:</b> 
-								antoine.dumont.neira@hotmail.com
+								dumont@mpia.de
 							</p>
 							<p> 
 								<b>Address:</b> 
-								University of Utah, 115 South 1400 East 84122 Salt Lake City, USA
+								Königstuhl 17, 69117 Heidelberg
 							</p>
 
 							<!-- 	Here are the fancy icons that link to your social media.
