--- a/index.html
+++ b/index.html
@@ -151,6 +151,12 @@
 								reveal the presence of SMBHs that are present in stripped nuclei, which are the remnants 
 								of galaxies whose outer parts were stripped through tidal interactions with CenA.
 							</p>
+							</p>
+								<b>Investigating the Dark Matter Halo of NGC 5128 using a Discrete Dynamical Model </b><br>The goal of my current research is to identify stripped nuclei in CenA 
+								through dynamical mass measurements of globular clusters (GCs). These measurements can 
+								reveal the presence of SMBHs that are present in stripped nuclei, which are the remnants 
+								of galaxies whose outer parts were stripped through tidal interactions with CenA.
+							</p>
 						</article>
 
 						<!-- Here is the "Community" card. -->
