--- a/index.html
+++ b/index.html
@@ -143,19 +143,18 @@
 								We found an excess of NIR to X-ray emission at low-acreation rates, challenging the standar model of AGN acreation, and encouraging the usage of NIR for AGN tracers
 								at low-luminosities specially looking at the future with JWST.<br>Here you can see my
 								<a href="https://youtu.be/7dYG2r2e4vc"> talk</a>,for the SMBH conference in Pucon, Chile in Dec. 2020
-								and the link to the <a href="https://iopscience.iop.org/article/10.3847/1538-4357/ab5798"> paper!</a>.
+								and the link to the <a href="https://ui.adsabs.harvard.edu/abs/2020ApJ...888...19D/abstract"> paper!</a>.
 							</p>
 							<p>
-								<b>Revealing the accretion history of Centaurus A through its surviving nuclear star clusters</b><br>The goal of my current research is to identify stripped nuclei in CenA 
+								<b>Revealing the accretion history of Centaurus A through its surviving nuclear star clusters</b><br>The goal was to identify stripped nuclei in CenA 
 								through dynamical mass measurements of globular clusters (GCs). These measurements can 
 								reveal the presence of SMBHs that are present in stripped nuclei, which are the remnants 
 								of galaxies whose outer parts were stripped through tidal interactions with CenA.
+								Link to the <a href="https://ui.adsabs.harvard.edu/abs/2022ApJ...929..147D/abstract"> paper!</a>
 							</p>
 							</p>
-								<b>Investigating the Dark Matter Halo of NGC 5128 using a Discrete Dynamical Model </b><br>The goal of my current research is to identify stripped nuclei in CenA 
-								through dynamical mass measurements of globular clusters (GCs). These measurements can 
-								reveal the presence of SMBHs that are present in stripped nuclei, which are the remnants 
-								of galaxies whose outer parts were stripped through tidal interactions with CenA.
+								<b>Investigating the Dark Matter Halo of NGC 5128 using a Discrete Dynamical Model </b><br> 
+								Link to the <a href="https://ui.adsabs.harvard.edu/abs/2023arXiv230611786D/abstract"> paper!</a>
 							</p>
 						</article>
 
@@ -163,18 +162,12 @@
 						<article id="community">
 							<h2 class="major">Community</h2>
 							<span class="image main">
-								<img src="images/IMG_0024.png" alt=""/>
+								<img src="images/IMG_0024.png" alt=""/> Atmospheric ballon launch <a href="https://youtu.be/gwAuOsoh3jI"> video </a>in the west dessert of Utah.
 							</span>
 							<p>
 								<b>Teaching:</b>
 							</p>
-							<p>
-								<b>Outreach:</b>
-							</p>
-							 Atmospheric ballon launch <a href="https://youtu.be/gwAuOsoh3jI"> video </a>in the west dessert of Utah.
-							<p>
-								<b>Equity & Inclusion:</b>
-							</p>
+						
 						</article>
 
 						<!-- Here is a the "Contact" card. -->
