--- a/index.html
+++ b/index.html
@@ -117,8 +117,7 @@
 								<b>Education:</b>
 							</p>
 							I was borned and raised in the southern regions of Chile. I received my undergrad studies in Applied Physics at the Universtiy of Santiago in 2015. 
-							In 2016 I joined the graduate program in Physics & Astronomy at the University of Utah where I obtained my milestone master in Physics & Astronomy
-							and now I am a Ph.D. candidate in the same institution. 
+							In 2016 I joined the graduate program in Physics & Astronomy at the University of Utah where I obtained my milestone master and Ph.D in Phyiscs in 2022. Currently, I work as a postdoctoral researcher at the Galactic Nuclei group at the Max Planck Institut fur Astronomie lead by Dr. Nadine Neumayer.
 							<p>
 								<b>Research Interests:</b>
 							</p>
@@ -144,6 +143,7 @@
 								at low-luminosities specially looking at the future with JWST.<br>Here you can see my
 								<a href="https://youtu.be/7dYG2r2e4vc"> talk</a>,for the SMBH conference in Pucon, Chile in Dec. 2020
 								and the link to the <a href="https://ui.adsabs.harvard.edu/abs/2020ApJ...888...19D/abstract"> paper!</a>.
+								<img src="images/guilin_2019.png" alt=""/>
 							</p>
 							<p>
 								<b>Revealing the accretion history of Centaurus A through its surviving nuclear star clusters</b><br>The goal was to identify stripped nuclei in CenA 
