--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 								at low-luminosities specially looking at the future with JWST.<br>Here you can see my
 								<a href="https://youtu.be/7dYG2r2e4vc"> talk</a>,for the SMBH conference in Pucon, Chile in Dec. 2020
 								and the link to the <a href="https://ui.adsabs.harvard.edu/abs/2020ApJ...888...19D/abstract"> paper!</a>.
-								<img src="images/guilin_2019.png" alt=""/>
+								<img src="images/main_plot_paper2020.png" alt=""/>
 							</p>
 							<p>
 								<b>Revealing the accretion history of Centaurus A through its surviving nuclear star clusters</b><br>The goal was to identify stripped nuclei in CenA 
